--- a/value-expr/value-expressions.html
+++ b/value-expr/value-expressions.html
@@ -335,6 +335,23 @@ constructor, making an object for <code>s</code>, returning it into
 the copy constructor that makes a copy of <code>s</code> for <code>
 s_copy</code>.
 </p>
+
+<h3>Resources</h3>
+
+<p class=p.small>
+  <a href="https://en.cppreference.com/w/cpp/language/expressions">
+  Expressions </a><br>
+
+  <a href="https://en.cppreference.com/w/cpp/language/value_category">
+  Value Categories</a><br>
+
+  Scott Meyers, <a href="https://www.amazon.com/Effective-Modern-Specific-Ways-Improve/dp/1491903996">Effective Modern C++</a>. O'Reilly Media (2015). Chapters 1, 2,
+  3, and 5.<br>
+
+  <a href="https://github.com/cplusplus/draft">C++ Standard</a> Sections 6.9-6.10,
+  7.1-7.4, and 8.1-8.5.
+</p>
+
 </body>
 
 </html>
