--- a/coding/spec.html
+++ b/coding/spec.html
@@ -53,10 +53,42 @@
   receiving some bits), sends the data (in the form of bits),
   and closes the connection (by sending/receiving some bits).
   I repeat myself intentionally to emphasize that the interface
-  is very simple and the details are what actually provide the
-  functionality.
+  is very simple and the details brought in by the user of
+  it are what make an interesting application.
 </p>
 
 <p>
-  More
+  There are two main classes - Network and NetworkedComputer.
+  The Network is the medium through which data is exchanged
+  between NetworkedComputers. It provides a very simple interface.
+  Anyone can write data to the Network and read data off of
+  it. When data is written to the network, it persists for some
+  globally defined time (we'll use 10s or 10,000ms) after
+  which anyone who tries to read that data will fail to. When
+  someone reads from the Network, they receive all data that
+  is currently written to it. It is open and transparent -
+  much like the internet today. The definition of the Network
+  class is as follows:
 </p>
+
+<pre>
+class Network {
+public:
+    // write numChars characters to the network,
+    // when this function completes, the network will
+    // have a copy of each char between data[0] and
+    // data[numChars-1] for persistence() milliseconds.
+  void write(char* data, int numChars); 
+
+    // read all data currently in the network,
+    // when this function returns, the array pointed
+    // to by data will have numChars characters
+    // from data[0] to data[numChars-1]
+  void read(char* data, int& numChars) const;
+
+    // returns an integer representing the number of
+    // milliseconds the network holds onto data written
+    // to it for
+  int persistence() const;
+};
+</pre>
